# kenku-fm

./: .env  .env-cmdrc  .gitattributes  .gitignore  .npmrc  .yarnrc  .yarnrc.yml  README.md  entitlements.plist  forge.config.js  forge.config.ts  package.json  requirements.txt  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
.circleci/: config.yml  new-config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: app-build.yml  deploy.yaml  publish-linux-arm.yaml  publish-stable.yaml  publish.yaml
assets/: icon.icns
disgo/: broadcast.go  discord.go  go.mod  go.sum  main.go  webrtc.go
drongo/: broadcast.go  discord.go  go.mod  go.sum  main.go  webrtc.go
infra/: .terraform.lock.hcl  main.tf  provider.tf  variables.tf
publish/: script-get-github-release.sh  script-macos.sh  script-win.sh
publish/mac/: package.js  package.json  sign.js
publish/windows/: config.json  index.js  package.json  publish.sh
severus/: Cargo.toml  README.md  index.d.ts  package.json
severus/src/: broadcast.rs  constants.rs  dave.rs  discord.rs  electron_log.rs  encrypt.rs  error.rs  lib.rs  receiver.rs  rtc.rs  rtc_broadcast.rs  rtc_udp.rs  sender.rs  stream.rs  udp_broadcast.rs  udp_discord.rs  voice_connection.rs
snap/: snapcraft.yaml
snap/gui/: kenku-fm.desktop
src/: autoUpdate.ts  backoff.ts  bounds.ts  discord.ts  global.d.ts  index.html  index.ts  log.ts  menu.ts  preload.ts  renderer.ts  update.ts
src/app/: App.css  App.tsx  store.ts  theme.ts
src/assets/: setup.icns
src/audioCapture/: AudioCapture.ts  PCMStream.worklet.js  RTCConnection.ts  RTCStream.ts  SharedBuffer.worklet.js  StreamSender.worker.js  StreamSync.worker.js  UDPStream.ts  index.html  preload.ts  renderer.ts
src/discord/: constants.ts
src/discord/gateway/: Gateway.ts  GatewayCloseCode.ts  GatewayDescription.ts  GatewayEvent.ts  GatewaySocket.ts  getGatewayDescription.ts
src/discord/http/: get.ts  getGatewayDescription.ts  getGuildChannels.ts  getGuildMember.ts  getGuildsAndVoiceChannels.ts  getUserGuilds.ts
src/discord/permissions/: Permission.ts  hasPermission.ts
src/discord/types/: Channel.ts  (+4 more)
src/main/: BroadcastManager.ts  Disgo.ts  Drongo.ts  LocalBroadcast.ts  LocalDispatcher.ts  Remote.ts  discord.ts  disgo.ts  main.ts  preload.js  store.ts  userAgent.ts
src/player/: index.css  index.html  index.tsx  preload.ts
src/preload/: store.ts
src/remote/: App.tsx  Player.tsx  index.html  index.tsx  preload.ts
src/renderer/: index.ejs  index.tsx
src/types/: custom.d.ts  player.ts  store.ts  wrtc.d.ts
(+160 files in other folders)
