[package]
name = "severus"
version = "0.1.0"
license = "GPL-3.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
rtp = "0.8.0"
rand = "0.8.5"
log = "0.4.17"
async-trait = "0.1"
flume = "0.11.0"
dashmap = "5.5.3"
livekit-webrtc = { path = "/Users/mitch/Downloads/client-sdk-rust-main/livekit-webrtc" }
audiopus = "0.3.0-rc.0"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.neon]
version = "0.10"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]

[dependencies.tokio]
version = "1.26"
features = ["macros", "rt-multi-thread"]

[dependencies.discortp]
features = ["discord-full"]
version = "0.4"

[dependencies.crypto_secretbox]
version = "0.1.1"
features = ["std"]
