[package]
name = "severus"
version = "0.1.0"
license = "GPL-3.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1"
futures = "0.3"
rand = "0.8.5"
log = "0.4.17"
async-trait = "0.1"
flume = "0.11.0"
dashmap = "5.5.3"
rtp = "0.11.0"
webrtc = "0.11.0"

[dependencies.neon]
version = "1.0.0"

[dependencies.tokio]
version = "1.47.1"
features = ["full"]

[dependencies.discortp]
version = "0.5"
features = ["discord-full"]

[dependencies.crypto_secretbox]
version = "0.1.1"
features = ["std"]
